<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ucam.java.android.tarefa04.PrincipalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmação de produtos"
        android:id="@+id/textView" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_marginTop="81dp"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout"
        android:layout_alignParentBottom="true">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/prod1"
            android:id="@+id/textView1"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/prod2"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prod3"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="0" />


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Qtd"
        android:id="@+id/textView4"
        android:layout_row="0"
        android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Qtd"
            android:id="@+id/textView5"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Qtd"
            android:id="@+id/textView6"
            android:layout_row="0"
            android:layout_column="3" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:id="@+id/button1"
            android:layout_row="4"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:id="@+id/button2"
            android:layout_row="4"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ "
            android:id="@+id/textView7"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ "
            android:id="@+id/textView8"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ "
        android:id="@+id/textView9"
        android:layout_row="0"
        android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total R$"
            android:id="@+id/textView10"
            android:layout_row="3"
            android:layout_column="3" />




    </GridLayout>


</RelativeLayout>
